JDBC store testing with new jcstress suite